# ParaCuda

./: .gitignore  README.md  environment.yml  pyproject.toml
src/paracuda/: decorators.py  devices.py  paracuda_run.py  utils.py
src/paracuda/tests/: test_paracuda.py  test_utils.py
